junit test revised with builder for test data